Trying to fix squished back to top button

--- a/src/styles/Index.less
+++ b/src/styles/Index.less
@@ -100,4 +100,31 @@ html, body {
         &:hover { background-color: @primary; }
         &:active { background-color: darken(@primary, 10%); }
     }
+
+    // Make sure the back to top button is not squished on mobile.
+    .back-to-top-button {
+        position: absolute;
+        left: 50%;
+        top: -50px;
+        width: 80px;
+        border: none;
+        color: black;
+        outline: none;
+        display: block;
+        cursor: pointer;
+        font-size: 14px;
+        background: none;
+        text-decoration: none;
+        transform: translateX(-50%);
+    
+        span {
+            display: block;
+            margin-bottom: 100px;
+            font-weight: bolder;
+        }
+        p {
+            margin-top: 0px;
+            font-weight: bolder;
+        }
+    }
 }
